log
Thu 23 Mar 2023 03:31:34 PM UTC: 
 tests:  0|6
total_score: 0/70
7e7ef7a
Thu 23 Mar 2023 03:57:12 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head=null
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:15: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head=null
      |               ^~~~
list.c:34:19: error: expected ‘;’ before ‘lista’
   34 |   lista->head=null
      |                   ^
      |                   ;
   35 |   lista->tail=null
      |   ~~~~~            
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
492875d
Thu 23 Mar 2023 03:57:32 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = null;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:17: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head = null;
      |                 ^~~~
Compilation failed
df4b0fa
Thu 23 Mar 2023 03:57:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = null;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:17: error: ‘null’ undeclared (first use in this function)
   34 |   lista->head = null;
      |                 ^~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
86dfa60
Thu 23 Mar 2023 03:58:03 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:34:3: error: ‘lista’ undeclared (first use in this function)
   34 |   lista->head = NULL;
      |   ^~~~~
list.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a94036b
Thu 23 Mar 2023 03:58:14 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List->lista =  (List *) malloc(sizeof(List));
      |       ^~
list.c:35:3: error: ‘lista’ undeclared (first use in this function)
   35 |   lista->head = NULL;
      |   ^~~~~
list.c:35:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
66a2a0f
Thu 23 Mar 2023 03:58:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c9bbfda
Thu 23 Mar 2023 04:26:24 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
903722a
Sun 26 Mar 2023 12:53:54 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
05afbd7
Sun 26 Mar 2023 02:00:34 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:32: error: expected ‘)’ before ‘list’
   56 |   if(list->current==list ->tail list->current == NULL)
      |     ~                          ^~~~~
      |                                )
Compilation failed
7a9c929
Sun 26 Mar 2023 02:01:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
643b38b
Sun 26 Mar 2023 02:02:51 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
18c9a78
Sun 26 Mar 2023 02:05:04 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
85ec391
Sun 26 Mar 2023 02:06:52 AM UTC: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:88:25: error: expected ‘;’ before ‘:’ token
   88 |     n->next = list->head:
      |                         ^
      |                         ;
list.c:90:19: error: expected ‘;’ before ‘}’ token
   90 |     list->head = n
      |                   ^
      |                   ;
   91 |   }
      |   ~                
Compilation failed
6c46925
Sun 26 Mar 2023 02:06:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:19: error: expected ‘;’ before ‘}’ token
   90 |     list->head = n
      |                   ^
      |                   ;
   91 |   }
      |   ~                
Compilation failed
ddb1df0
Sun 26 Mar 2023 02:07:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
39037e4
Sun 26 Mar 2023 02:30:19 AM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:103:5: error: expected ‘(’ before ‘*’ token
  103 |   if*list->current == list->tail)
      |     ^
      |     (
list.c:103:5: error: statement with no effect [-Werror=unused-value]
  103 |   if*list->current == list->tail)
      |     ^~~~~~~~~~~~~~
list.c:103:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  103 |   if*list->current == list->tail)
      |   ^~
list.c:103:33: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  103 |   if*list->current == list->tail)
      |                                 ^
list.c:103:33: error: expected statement before ‘)’ token
list.c:105:18: error: ‘nuevaDato’ undeclared (first use in this function); did you mean ‘nuevoDato’?
  105 |     list->tail = nuevaDato;
      |                  ^~~~~~~~~
      |                  nuevoDato
list.c:105:18: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a493c7c
Sun 26 Mar 2023 02:30:28 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:103:5: error: expected ‘(’ before ‘*’ token
  103 |   if*list->current == list->tail)
      |     ^
      |     (
list.c:103:5: error: statement with no effect [-Werror=unused-value]
  103 |   if*list->current == list->tail)
      |     ^~~~~~~~~~~~~~
list.c:103:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  103 |   if*list->current == list->tail)
      |   ^~
list.c:103:33: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  103 |   if*list->current == list->tail)
      |                                 ^
list.c:103:33: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
bec3ecb
Sun 26 Mar 2023 02:30:34 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
5008b0c
